--- a/src/components/StitchDebugger.astro
+++ b/src/components/StitchDebugger.astro
@@ -9,7 +9,7 @@
   title="🐛 Click me!"
 >
   <img
-    src="/stitch-debugger.png"
+    src="/stitch-debugger.webp"
     alt="Stitch holding a bug"
     class="w-28 h-28 md:w-36 md:h-36 object-contain drop-shadow-lg pointer-events-none"
     draggable="false"
