--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -24,7 +24,13 @@ const links = contactData?.links ?? [];
             target="_blank"
             rel="noopener noreferrer"
           >
-            <span class="material-symbols-outlined text-primary">{link.icon}</span>
+            {link.iconType === "svg" && link.svgPath ? (
+              <svg class="w-6 h-6 text-primary fill-current" viewBox={link.svgViewBox} xmlns="http://www.w3.org/2000/svg">
+                <path d={link.svgPath} />
+              </svg>
+            ) : (
+              <span class="material-symbols-outlined text-primary">{link.icon}</span>
+            )}
             <span class="text-gray-300">{link.label}</span>
           </a>
         ))}
